clusters/production/media/immich/immich-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-database
  namespace: media
  labels:
    app: immich-database
    app.kubernetes.io/name: immich-database
    app.kubernetes.io/instance: immich-database
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    rollingUpdate: null
    type: Recreate
  selector:
    matchLabels:
      app: immich-database
  template:
    metadata:
      labels:
        app: immich-database
        app.kubernetes.io/name: immich-database
        app.kubernetes.io/instance: immich-database
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: immich-database
          securityContext:
            allowPrivilegeEscalation: false
          image: ghcr.io/immich-app/postgres:16-vectorchord1.1.1-pgvector0.8.5 # {"$imagepolicy": "flux-system:immich-postgres"}
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: immich-db
          readinessProbe:
            exec:
              command: ["pg_isready", "--dbname=${POSTGRES_DB}", "--username=${POSTGRES_USER}"]
            initialDelaySeconds: 30
            periodSeconds: 30
      volumes:
        - name: immich-db
          persistentVolumeClaim:
            claimName: pvc-immich-db
---
apiVersion: v1
kind: Service
metadata:
  name: immich-database
  namespace: media
  labels:
    app.kubernetes.io/name: immich-database
    app.kubernetes.io/instance: immich-database
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app: immich-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
