clusters/production/media/immich/immich-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: media
  labels:
    app: immich-machine-learning
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    rollingUpdate: null
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
        app.kubernetes.io/name: immich-machine-learning
        app.kubernetes.io/instance: immich-machine-learning
        app.kubernetes.io/managed-by: flux
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: immich-machine-learning
          securityContext:
            allowPrivilegeEscalation: false
          image: ghcr.io/immich-app/immich-machine-learning:v3.3.0 # {"$imagepolicy": "flux-system:immich-machine-learning"}
          startupProbe:
            tcpSocket:
              port: 3003
            failureThreshold: 60
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3003
            periodSeconds: 20
          readinessProbe:
            tcpSocket:
              port: 3003
            periodSeconds: 10
          # volumeMounts:
          #   - mountPath: /cache
          #     name: model-cache
          # envFrom:
          #  - configMapRef:
          #     name: immich-env
          #     key: IMMICH_VERSION
          #readinessProbe:
          #  httpGet:
          #    path: /health
          #    port: 3003
          #  initialDelaySeconds: 30
          #  periodSeconds: 10
          resources:
            requests:
              cpu: "500m"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "16Gi"
          #resources:
          #    requests:
          #        gpu.intel.com/i915: "1"
          #    limits:
          #        gpu.intel.com/i915: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: media
  labels:
    app.kubernetes.io/name: immich-machine-learning
    app.kubernetes.io/instance: immich-machine-learning
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app: immich-machine-learning
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
