clusters/production/media/immich/immich-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: media
  name: immich-redis
  labels:
    app: immich-redis
    app.kubernetes.io/name: immich-redis
    app.kubernetes.io/instance: immich-redis
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
        app.kubernetes.io/name: immich-redis
        app.kubernetes.io/instance: immich-redis
        app.kubernetes.io/managed-by: flux
    spec:
      containers:
        - name: immich-redis
          image: docker.io/redis:8.0.0-alpine # {"$imagepolicy": "flux-system:redis2"}
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            exec:
              command: ["redis-cli", "ping"]
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: media
  labels:
    app.kubernetes.io/name: immich-redis
    app.kubernetes.io/instance: immich-redis
    app.kubernetes.io/managed-by: flux
spec:
  selector:
    app: immich-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
