clusters/production/media/immich/immich-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: default
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - immich.rees.ca
  rules:
  - timeouts:
      request: 600s
      backendRequest: 600s
    backendRefs:
    - name: immich-server
      port: 2283
